# DockingDockingDearImGui

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt  main.cpp
source/Core/: AppContext.cpp  AppContext.h  CoreSystem.cpp  CoreSystem.h  ImGuiSystem.cpp  ImGuiSystem.h  SystemWindow.cpp  SystemWindow.h
source/Support/: WinInclude.h
